manifest/deployment.yaml
####################################################
# App Deployment with Kyverno-Envoy and Envoy sidecars.
####################################################
apiversion: apps/v1
kind: Deployment
metadata:
  name: example-app
  labels:
    app: example-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-app
  template:
    metadata:
      labels:
        app: example-app
    spec:
      initContainers:
        - name: proxy-init
          image: sanskardevops/proxyinit:latest
          # Configure the iptables bootstrap script to redirect traffic to the
          # Envoy proxy on port 8000, specify that Envoy will be running as user
          # 1111, and that we want to exclude port 8282 from the proxy for the
          # OPA health checks. These values must match up with the configuration
          # defined below for the "envoy" and "opa" containers.
          args: ["-p", "8000", "-u", "1111", "-w", "8282"]
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
            runAsNonRoot: false
            runAsUser: 0
      containers:
        - name: app
          image: sanskardevops/testserver:latest
          ports:
            - containerPort: 8080
        - name: envoy
          image: envoyproxy/envoy:v1.20.0
          env:
            - name: ENVOY_UID
              value: "1111"
          volumeMounts:
            - readOnly: true
              mountPath: /config
              name: proxy-config
            - readOnly: false
              mountPath: /run/sockets
              name: emptyDir
          args:
            - "envoy"
            - "--log-level"
            - "debug"
            - "--config-path"
            - "/config/envoy.yaml"
        - name: opa-envoy
          image: sanskardevops/kyverno-envoy:0.0.1
          securityContext:
            runAsUser: 1111
          volumeMounts:
            - readOnly: true
              mountPath: /policy
              name: kyverno-policy
            - readOnly: false
              mountPath: /run/sockets
              name: emptyDir
          containerPort: 9002    
          args:
            - "serve"
            - "--policy=/policy/kyverno-policy.yaml"
            - "--address=localhost:9002"         
      volumes:
        - name: proxy-config
          configMap:
            name: proxy-config
        - name: kyverno-policy
          configMap:
            name: kyverno-policy
        - name: emptyDir
          emptyDir: {}
---
######################################################################
# Envoy Config with External Authorization filter that will query kyverno.
######################################################################
apiVersion: v1
kind: ConfigMap
metadata:
  name: proxy-config
data:
  envoy.yaml: |
  static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: upstream
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: upstream-service
          http_filters:
          - name: envoy.filters.http.ext_authz
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
              transport_api_version: V3
              http_service:
                server_uri:
                  uri: ext_authz
                  cluster: ext_authz-http-service
                  timeout: 0.250s
          
  clusters:
  - name: upstream-service
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: upstream-service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8080

  - name: ext_authz-http-service
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: ext_authz-http-service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: ext_authz-http-service
                port_value: 9002

  admin:
        access_log_path: "/dev/null"
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 8001
---
############################################################
# Example policy to enforce into Kyverno-Envoy sidecars.
############################################################
apiVersion: v1
kind: ConfigMap
metadata:
  name: kyverno-policy
data:
  policy.yaml: |
    apiVersion: json.kyverno.io/v1alpha1
    kind: ValidatingPolicy
    metadata:
      name: check-external-auth
    spec:
      rules:
        - name: 
          assert:
            all:
            - message: "DELETE calls are not allowed"
              check:
                attribute:
                    request:
                        http:
                            (method == 'DELETE'): false
